# Fractal-Image-Compression

./: CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  gen-checksums.sh  measure-flops-img.sh  measure-flops.sh  results.csv  run.sh  team033  team033.cbp  test-time.sh
benchmark_img/: convert_to_bmp.sh
benchmark_img/original/: ppm_to_png.sh
imgs/: .directory
script/: avg.py  cache.py  gcc_vs_icc.py  n_vs_b.py  performance_plot.py  roofline_plot.py  runtime_plot.py  speed.py  time_images.py  time_plot.py
src/: main.c
src/benchmark/: benchmark.c  benchmark.h  tsc_x86.h
src/compression/: imageCompressor.c  imageCompressor.h  imagetransform.c  imagetransform.h
src/utils/: bmp.c  bmp.h  encoder.c  encoder.h  imageIO.c  imageIO.h
